cmake_minimum_required(VERSION 2.9)
# FILE(WRITE ExternalDriver/UnitServerIgnore "disabled ${PROJECT_NAME}")
add_subdirectory(Ocem)
add_subdirectory(Hazemeyer)
add_subdirectory(PowerSim)
add_subdirectory(ExternalDriver)
IF (ENABLE_MEMCACHE)
    add_subdirectory(dante)
ENDIF()
SET(DRIVERS_LIB ${DRIVERS_LIB} PARENT_SCOPE)
