cmake_minimum_required(VERSION 2.9)
project(chaos_driver_powersupply_external)
SET(DRIVERS_LIB ${DRIVERS_LIB} ${PROJECT_NAME} PARENT_SCOPE)

FILE(GLOB src *.cpp)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${src})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FrameworkLib})
FILE(GLOB files "*.h")
INSTALL(FILES ${files} DESTINATION include/driver/powersupply/models/ExternalDriver/)

#INSTALL_TARGETS(/lib ${PROJECT_NAME} )
INSTALL(TARGETS ${PROJECT_NAME}
        DESTINATION "lib"
        PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)




